# physics-engine

./: CMakeLists.txt  README.md  config.h.in  fragment.glsl  main.cpp  vertex.glsl
engine/: CMakeLists.txt  aux.cpp  aux.h  camera.h  collision.h  linalg.cpp  linalg.h  mesh.cpp  mesh.h  object.h  physics.h  scene.h
engine_test/: CMakeLists.txt  shader.glsl  test_aux.cpp  test_linalg.cpp  test_physics.cpp
res/: poolball.mtl
